--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-splash-screen": "^2.0.0",
