--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx-react": "^4.1.8",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
+    "react-native-navbar": "^1.7.1",
     "react-native-splash-screen": "^2.0.0",
     "react-navigation": "^1.0.0-beta.9"
   },
