--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "ac-qrcode": "^1.0.1",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-navbar": "^1.7.1",
     "react-native-splash-screen": "^2.0.0",
     "react-navigation": "^1.0.0-beta.9"
