1.完成首页 - 推荐页面 2.完成专题页面 3.完成分类页面 4.完成购物车页面 5.完成购物车徽标 6.完成个人页面 7.完成登录页面 8.实现登录页面切换功能

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,7 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
+//            abiFilters "armeabi-v7a"
             abiFilters "armeabi-v7a", "x86"
         }
     }
@@ -109,6 +110,7 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
+//            include "armeabi-v7a"
             include "armeabi-v7a", "x86"
         }
     }
@@ -135,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-update')
     compile project(':react-native-camera')
     compile project(':react-native-splash-screen')
     compile fileTree(dir: "libs", include: ["*.jar"])
